[package]
name = "ktane-simon-says"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-hal                = { version = "1.0.0", features = ["esp32c6", "unstable", "log-04"] }
esp-rtos               = { version = "0.2.0", features = ["embassy", "log-04", "esp32c6"] }
esp-println            = { version = "0.16.1", features = ["log-04", "esp32c6"] }

embassy-executor = { version = "0.9.1" }
embassy-time     = "0.5.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
lto              = 'fat'

# Disapble '--test' flag passed to rustc/rust analyzer, avoid "can't find crate for test" lint message.
[[bin]]
name = "ktane-simon-says"
test = false
bench = false