[package]
name = "ktane-simon-says"
version = "0.1.0"
edition = "2024"

# Disable '--test' flag passed to rustc/rust analyzer, avoid "can't find crate for test" lint message.
[[bin]]
name = "ktane-simon-says"
test = false
bench = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6", "log-04"] }
esp-hal = { version = "~1.1.0", features = ["esp32c6", "log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["esp32c6", "log-04", "embassy"] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }

log = "0.4.27"

embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-time = { version = "0.5.1", features = ["log"] }

esp-hal-smartled = { git = "https://github.com/florianL21/esp-hal-community.git" }
smart-leds = "0.4.0"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
