[workspace]
resolver = "3"
members = ["simon-says", "timer"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
esp-bootloader-esp-idf = { version = "0.5.0", features = ["log-04"] }
esp-hal = { version = "~1.1.0", features = ["log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["log-04", "embassy"] }
esp-println = { version = "0.17.0", features = ["log-04"] }
esp-backtrace = { version = "0.19.0", features = [
    "panic-handler",
    "println",
] }
log = "0.4.33"
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.1", features = ["log"] }
embassy-sync = { version = "0.8.0" }
embedded-can = { version = "0.4.1" }
embedded-hal-async = "1.0.0"
zencan-node = { path = "../zencan/zencan-node", default-features = false, features = ["log"]}

# For fine-tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 # prefer slower builds but better debugging experience
lto = true
opt-level = "s"
